# discrete-diffusion-distributions

./: README.md  pyproject.toml
notebooks/: generate_tables.ipynb  plot_beta_schedules.ipynb  plot_transition_matrices.ipynb
scripts/: run_exps.sh
src/d3exp/: __main__.py  beta_schedules.py  data.py  diffusion.py  dynamics.py  evaluation.py  trainer.py  transitions.py
src/d3exp/config/: __init__.py  absorbing_center.py  base.py  defaults.py  doubly_stochastic_beta_schedules.py  gaussian_and_uniform_beta_schedules.py  gaussian_beta_schedules.py  over_peakiness.py  uniform.py
